Examples/test-suite/errors/cpp_recursive_typedef.i
%module xxx

typedef std::set<pds> pds;

